# Object_Recognition

./: CMakeLists.txt
src/: ExtractSingleObjectFeatures.cpp  ExtractSingleObjectFeatures.h  Object.cpp  Object.h  SceneInformation.cpp  SceneInformation.h  SingleObjectFeatures.cpp  SingleObjectFeatures.h  XMLParser.cpp  XMLParser.h  test.cpp
