cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(Object_Recognition)
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
find_package( PCL 1.4 REQUIRED COMPONENTS visualization filters segmentation  )
find_package( OpenCV REQUIRED )
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_library(Object src/Object.cpp)
add_library(SceneInformation src/SceneInformation.cpp)
add_library(XMLParser src/XMLParser.cpp)
add_executable(test src/test.cpp)
target_link_libraries(test ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
